mobile links color fix, mobile center scroll fix, double scroll fix?

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
 html, body{
   min-width: 250px;
   overflow-x: hidden;
+  /* overflow-y: hidden; */
 }
 
 nav{
@@ -36,7 +37,7 @@ p{
 
 h1{
   font-family: "Open Sans";
-  font-size: 80px;
+  font-size: 75px;
   font-weight: bolder;
 }
 
